...
                app:endIconMode="custom"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Brief Description -->
...
                app:endIconMode="custom"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Make and Model section -->
...
                    android:hint="Make"
                    app:hintEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/makeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
...
                android:hint="Model"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/modelInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
...
                app:endIconMode="custom"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/serialNumberInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Estimated Value -->
...
                android:hint="Estimated Value"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/valueInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <!-- Comments -->
            <com.google.android.material.textfield.TextInputLayout
...
                android:hint="Comments"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commentInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
...

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal">
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tagChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <!-- Chips will be added here dynamically -->
            </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>
            <!-- Create Tag Button with Icon -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/AddTagButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableRight="@drawable/tag"
                android:drawablePadding="2dp"
                android:gravity="center"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AddTagButton"/>
</LinearLayout>
    </com.google.android.material.card.MaterialCardView>

<com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
